--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ body{
   margin-top: 2em;
   border: 4px double brown;
   width: 10em;
+  text-align: center;
 
 }
 
@@ -57,3 +58,4 @@ body{
 .img{
   width: 20em;
 }
+
