--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body{
   background-color: antiquewhite;
 }
 
-.indice{
+.li{
   border: 1px solid brown;
   width: 17em;
   margin: 0.4em;
@@ -63,3 +63,6 @@ pre{
   font-size: 18px;
 }
 
+h1{
+  margin-top: 2em;
+}
