--- a/styles/style.css
+++ b/styles/style.css
@@ -71,4 +71,16 @@ section{
   padding: 5em;
 }
 
+h3{
+  font-size: 1.4em;
+  font-style: italic;
+}
+
+h4{
+  font-style: italic;
+  font-size: 1.2em;
+}
+
+
+
 
