--- a/styles/style.css
+++ b/styles/style.css
@@ -66,10 +66,10 @@ pre{
 h1{
   margin-top: 2em;
 }
-
-section{
-  padding: 5em;
+h2{
+  color: red;
 }
+
 
 h3{
   font-size: 1.4em;
@@ -81,6 +81,8 @@ h4{
   font-size: 1.2em;
 }
 
-
+section{
+  padding: 5em;
+}
 
 
