--- a/layouts/PrincipalInicio.html
+++ b/layouts/PrincipalInicio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>FORMACION</title>
+  <title>LITURGIA</title>
 </head>
 <body>
   <p id="alInicio" class="principio"></p>
@@ -16,10 +16,9 @@
         <a href="../index.html" class="nombre">INICIO </a>
       </div>
     </header> <br><br>
-    <!-- *************************************************************************** -->
+    <!-- ****************************************************************** -->
     <h1 class="init">OBJETIVO</h1>
-    <h3><b>Tanto el que evangeliza como los que escuchen, crezcan en el amor de Dios</b></h3>
-    <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
+     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
 
     <section id="Formación">
@@ -27,12 +26,10 @@
       <h1> FORMACIÓN</h1>
       <div>
         <ol>
-          <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
-          <li class="li"><a href="../oracion/oracion.html">ORACIÓN</a></li>
-          <li class="li"><a href="../liturgia/liturgia.html">LITURGIA</a></li>
-          <li class="li"><a href="../noviciado/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
-          <li class="li"><a href="../historia/index.html">HISTORIA DE LA IGLESIA</a></li>
+          <li class="li"><a href="../liturgia/misa.html">MISA- MISAL ROMANO</a></li>
+
         </ol>
+
       </div>
     </section>
 </body>
