--- a/layouts/PrincipalInicio.html
+++ b/layouts/PrincipalInicio.html
@@ -24,19 +24,19 @@
 
 <!-- ****************************************************************** -->
 
-<section id="00">
+<section id="0">
   <hr>
   <h1> TEMAS</h1>
   <div>
     <ol>
-      <li class="li"><a href="">INTRODUCCIÓN</a></li>
+     li*7>a[href="#$"]
 
     </ol>
 
   </div>
 </section>
 <!-- ****************************************************************** -->
-<section id="01">
+<section id="1">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -44,7 +44,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="02">
+<section id="2">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -52,7 +52,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="03">
+<section id="3">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -60,7 +60,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="04">
+<section id="4">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -68,7 +68,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="05">
+<section id="5">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -76,7 +76,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="06">
+<section id="6">
   <h2 class="subtitulo"></h2>
   <p>
 
@@ -84,7 +84,7 @@
 
 </section>
 <!-- ****************************************************************** -->
-<section id="07">
+<section id="7">
   <h2 class="subtitulo"></h2>
 <p>
 
