--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,8 @@ h1{
   margin-top: 2em;
 }
 section{
-  padding: 5em;
+  padding: 5%;
+  margin-left: -4em;
 }
 .titulo{
   color: red;
@@ -81,6 +82,7 @@ section{
 }
 .subtitulo{
   color: darkred;
+  margin-left: 1em;
 }
 .lema{
   color: blue;
