--- a/layouts/PrincipalInicio.html
+++ b/layouts/PrincipalInicio.html
@@ -41,12 +41,27 @@
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
-      <summary></summary>
+      <summary>El Texto</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary></summary>
+      <summary>Variaciones en el Texto</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Temas</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Patrística</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Paralelos</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
