--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,14 @@ body{
 .li{
   border: 1px solid brown;
   width: 25em;
-  margin: 0.4em;
+  margin-left: 1em;
+  margin-top: 0.3em;
   font-size: 1.5em;
   padding-left: 0.5em;
+}
+
+ol{
+  margin-left: 1em;
 }
 
 .container{
