--- a/layouts/PrincipalInicio.html
+++ b/layouts/PrincipalInicio.html
@@ -146,6 +146,11 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
+        <summary>Metanoia</summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
         <summary></summary>
         <p><br><br></p>
       </details></li>
