--- a/layouts/PrincipalInicio.html
+++ b/layouts/PrincipalInicio.html
@@ -91,6 +91,11 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary>Paralelos</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
       <summary>Temas</summary>
       <p><br><br></p>
     </details></li>
@@ -101,10 +106,16 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary>Magisterio</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
+    <li><details class="select">
+      <summary>metanoia</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
@@ -131,6 +142,11 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
+        <summary>Paralelos</summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
         <summary>Temas</summary>
         <p><br><br></p>
       </details></li>
@@ -141,7 +157,7 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Paralelos</summary>
+        <summary>Magisterio</summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
@@ -175,6 +191,11 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary>Paralelos</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
       <summary>Temas</summary>
       <p><br><br></p>
     </details></li>
@@ -185,7 +206,12 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary>Magisterio</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Metanoia</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -214,6 +240,11 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary>Paralelos</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
       <summary>Temas</summary>
       <p><br><br></p>
     </details></li>
@@ -224,7 +255,12 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary>Magisterio</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
+      <summary>Metanoia</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -254,6 +290,11 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
+        <summary>Paralelos</summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
         <summary>Temas</summary>
         <p><br><br></p>
       </details></li>
@@ -264,7 +305,12 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary>Paralelos</summary>
+        <summary>Magisterio</summary>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary>Metanoia</summary>
         <p><br><br></p>
       </details></li>
       <!-- ****************************** -->
@@ -294,6 +340,11 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary>Paralelos</summary>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
       <summary>Temas</summary>
       <p><br><br></p>
     </details></li>
@@ -302,9 +353,13 @@
       <summary>Patrística</summary>
       <p><br><br></p>
     </details></li>
+    <!-- ****************************** -->  <li><details class="select">
+      <summary>Magisterio</summary>
+      <p><br><br></p>
+    </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Paralelos</summary>
+      <summary>Metanoia</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
