--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ section{
   margin-left: 1em;
 }
 .lema{
-  color: blue;
+  color: rgb(243, 36, 13);
   font-size: 1.2em;
   margin-left: 1em;
 }
