--- a/layouts/LectioDivina.html
+++ b/layouts/LectioDivina.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <title>LECTIO MATEO</title>
+    <link rel="stylesheet" href="../../../styles/style.css" />
+    <title>LECTIO</title>
   </head>
   <body>
     <p id="alInicio" class="principio"></p>
@@ -13,7 +13,7 @@
         <p class="logo">CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio">
-          <img src="../media/ESCUDOCARM.png" alt="" class="logoC" />
+          <img src="../../../../media/ESCUDOCARM.png" alt="" class="logoC" />
         </a>
         <a href="./index.html" class="nombre">INICIO</a>
       </div>
@@ -49,80 +49,63 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
+          </details>
+        </li>
+        <!-- ****************************** -->
+        <li>
+          <details class="select">
+            <summary>Metanoia</summary>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -136,70 +119,54 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           </details>
         </li>
         <!-- ****************************** -->
@@ -207,10 +174,7 @@
         <li>
           <details class="select">
             <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -225,80 +189,61 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -313,80 +258,61 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -401,80 +327,61 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -489,80 +396,61 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary></summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
@@ -577,70 +465,54 @@
         <li>
           <details class="select">
             <summary>El Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p></p>
           </details>
         </li>
         <!-- ****************************** -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           </details>
         </li>
         <!-- ****************************** -->
