--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body{
 
 .li{
   border: 1px solid brown;
-  width: 25em;
+  width: 90%;
   margin-left: 1em;
   margin-top: 0.3em;
   font-size: 1.5em;
